mask-repeat: round bug

Source/WebCore:

Added the round functionality to -webkit-mask-repeat and background-repeat. The tile size of the
image is scaled so that the image can fit a whole number of times in the background.
https://bugs.webkit.org/show_bug.cgi?id=119080

Patch by Andrei Parvu <parvu@adobe.com> on 2013-08-01
Reviewed by Dirk Schulze.

Tests: css3/masking/mask-repeat-round-auto1.html
       css3/masking/mask-repeat-round-auto2.html
       css3/masking/mask-repeat-round-border.html
       css3/masking/mask-repeat-round-content.html
       css3/masking/mask-repeat-round-padding.html
       css3/background/background-repeat-round-auto1.html
       css3/background/background-repeat-round-auto2.html
       css3/background/background-repeat-round-border.html
       css3/background/background-repeat-round-content.html
       css3/background/background-repeat-round-padding.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::calculateBackgroundImageGeometry):

LayoutTests:

Added tests for the -webkit-mask-repeat: round property.
https://bugs.webkit.org/show_bug.cgi?id=119080

Patch by Andrei Parvu <parvu@adobe.com> on 2013-08-01
Reviewed by Dirk Schulze.

* css3/masking/mask-repeat-round-auto1-expected.html: Added.
* css3/masking/mask-repeat-round-auto1.html: Added.
* css3/masking/mask-repeat-round-auto2-expected.html: Added.
* css3/masking/mask-repeat-round-auto2.html: Added.
* css3/masking/mask-repeat-round-border-expected.html: Added.
* css3/masking/mask-repeat-round-border.html: Added.
* css3/masking/mask-repeat-round-content-expected.html: Added.
* css3/masking/mask-repeat-round-content.html: Added.
* css3/masking/mask-repeat-round-padding-expected.html: Added.
* css3/masking/mask-repeat-round-padding.html: Added.
* css3/masking/resources/circle.png: Added.
* css3/background/background-repeat-round-auto1-expected.html: Added.
* css3/background/background-repeat-round-auto1.html: Added.
* css3/background/background-repeat-round-auto2-expected.html: Added.
* css3/background/background-repeat-round-auto2.html: Added.
* css3/background/background-repeat-round-border-expected.html: Added.
* css3/background/background-repeat-round-border.html: Added.
* css3/background/background-repeat-round-content-expected.html: Added.
* css3/background/background-repeat-round-content.html: Added.
* css3/background/background-repeat-round-padding-expected.html: Added.
* css3/background/background-repeat-round-padding.html: Added.
* css3/background/resources/circle.png: Added.

Canonical link: https://commits.webkit.org/137336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153582 268f45cc-cd09-0410-ab3c-d52691b4dbfc